--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -61,7 +61,7 @@ Layout/DotPosition:
 
 Layout/LineLength:
   Exclude: 
-    - 'spec/factories/**.*'
+    - 'spec/**/**.*'
 
 Metrics/BlockLength:
   Exclude: 
