--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+BASE_URL=http://localhost:4567
 DATABASE_URL=postgres://@localhost:5432/saml-microservice-dev
 SAML_CALLBACK_URL=http://localhost:4567/callback
 SESSION_SECRET=e1c80dfa8f6dd0c09f1112aad0bf2981
