--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
       "generator": "secret"
     },
     "JWT_URL": {
-      "description": "The authorization URL in your application where Osso can send a user to get a JWT",
+      "description": "The authorization URL in your application where Osso can send a user to get a JWT"
     }
   },
   "addons": [
