value in appjson

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
   "env": {
     "BASE_URL": {
       "description": "The host where your application is deployed - be sure to update to match a custom domain",
-      "generator": "myosso.herokuapp.com"
+      "value": "myosso.herokuapp.com"
     },
     "SESSION_SECRET": {
       "description": "A secret key for verifying the integrity of signed cookies.",
