--- a/app.json
+++ b/app.json
@@ -8,6 +8,8 @@
   ],
   "logo": "https://www.ossoapp.com/img/logo.svg",
   "repository": "https://github.com/enterprise-oss/osso",
+  "website": "https://ossoapp.com",
+  "success_url": "https://ossoapp.com/docs/guides/deployment#post-deployment",
   "env": {
     "BASE_URL": {
       "description": "The host where your application is deployed - replace APP-NAME with the app name you choose above, and be usre to update this ENV var when you set up a custom domain",
