--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
   "env": {
     "BASE_URL": {
       "description": "The host where your application is deployed - replace APP-NAME with the app name you choose above, and be usre to update this ENV var when you set up a custom domain",
-      "value": "APP-NAME.herokuapp.com"
+      "value": "https://APP-NAME.herokuapp.com"
     },
     "SESSION_SECRET": {
       "description": "A secret key for verifying the integrity of signed cookies.",
