--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,17 @@
 {
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
+    "oldstart": "tsc --noEmit && parcel ./src/index.tsx",
+    "start": "parcel serve ./src/index.tsx",
+    "build": "parcel build ./src/index.tsx",
     "test": "jest",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "lint": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
     "build:theme": "lessc --js ./src/index.less ./src/antd.css"
   },
   "devDependencies": {
-    "@babel/helper-plugin-utils": "^7.10.1",
-    "@snowpack/app-scripts-react": "^1.1.0",
-    "@snowpack/plugin-parcel": "^1.0.0",
+    "@parcel/transformer-svg-react": "^2.0.0-beta.1",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-beta.1",
+    "@parcel/ts-utils": "^2.0.0-beta.1",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
     "@types/react": "^16.9.35",
@@ -18,24 +19,26 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "browserslist": "^4.12.2",
     "eslint": "^7.1.0",
     "jest": "^25.4.0",
-    "less": "^3.11.1",
-    "postcss-cli": "^7.1.1",
-    "postcss-import": "^12.0.1",
+    "parcel": "^2.0.0-beta.1",
     "prettier": "^2.0.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "snowpack": "^2.0.3",
     "typescript": "^3.8.0"
   },
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
+    "@enterprise-oss/osso": "link:../../frontend/osso",
     "antd": "^4.2.5",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "react-router-dom": "^5.2.0"
-  }
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
