--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "osso",
+  "name": "osso-app",
   "version": "1.0.0",
   "repository": "git@github.com:enterprise-oss/osso.git",
   "author": "Sam Bauch <sbauch@gmail.com>",
