--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,9 @@
     "build:theme": "lessc --js ./src/index.less ./src/antd.css"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
     "@enterprise-oss/osso": "link:../../frontend/osso",
     "@svgr/parcel-plugin-svgr": "^5.4.0",
     "@testing-library/jest-dom": "^5.5.0",
@@ -17,10 +20,12 @@
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.0.2",
     "@typescript-eslint/parser": "^3.0.2",
+    "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.12.2",
     "eslint": "^7.1.0",
     "jest": "^25.4.0",
     "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
     "prettier": "^2.0.0",
     "react": "^16.13.1",
     "typescript": "^3.8.0"
@@ -29,7 +34,7 @@
     "@ant-design/colors": "^4.0.0",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "antd": "^4.2.5",
+    "antd": "^4.4.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "react": "^16.13.1",
