--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "license": "LICENSE",
   "scripts": {
     "postinstall": "cd client && yarn build"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.4"
   }
 }
