--- a/client/.babelrc
+++ b/client/.babelrc
@@ -5,7 +5,7 @@
       "import",
       {
         "libraryName": "antd",
-        "style": "css"
+        "libraryDirectory": "es"
       }
     ]
   ],
