update LICENSE field

--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "start": "parcel ./src/index.tsx",
     "build": "parcel build ./src/index.tsx",
