--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "repository": "git@github.com:enterprise-oss/osso.git",
   "author": "Sam Bauch <sbauch@gmail.com>",
-  "license": "LICENSE",
+  "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "postinstall": "cd client && yarn build"
   },
