--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "@ant-design/colors": "^4.0.0",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "@enterprise-oss/osso": "link:../../frontend/osso",
+    "@enterprise-oss/osso": "git+ssh://git@github.com:enterprise-oss/osso-react.git",
     "antd": "^4.4.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
