--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,7 @@
     "@ant-design/colors": "^4.0.0",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "@enterprise-oss/osso": "git+https://ae1fa90e21f4c2a6977ce80b1dd224f6a2003749:x-oauth-basic@github.com/enterprise-oss/osso-react.git",
+    "@enterprise-oss/osso": "^0.0.1",
     "antd": "^4.4.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
