--- a/client/.babelrc
+++ b/client/.babelrc
@@ -7,6 +7,15 @@
         "libraryName": "antd",
         "libraryDirectory": "es"
       }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "@ant-design/icons",
+        "libraryDirectory": "es/icons",
+        "camel2DashComponentName": false
+      },
+      "import-antd-icons"
     ]
   ],
   "presets": [
