--- a/client/package.json
+++ b/client/package.json
@@ -27,12 +27,14 @@
     "jest": "^25.4.0",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "parcel-plugin-compress": "^2.0.2",
     "prettier": "^2.0.0",
     "react": "^16.13.1",
     "typescript": "^3.8.0"
   },
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
+    "@ant-design/icons": "^4.2.1",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
     "@enterprise-oss/osso": "^0.0.1",
