--- a/package.json
+++ b/package.json
@@ -1,13 +1,51 @@
 {
-  "name": "osso-app",
-  "version": "1.0.0",
-  "repository": "git@github.com:enterprise-oss/osso.git",
-  "author": "Sam Bauch <sbauch@gmail.com>",
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "postinstall": "cd client && yarn build"
+    "start": "parcel ./client/src/index.tsx",
+    "build": "parcel build ./client/src/index.tsx --out-dir ./public",
+    "clean": "rm -rf client/dist",
+    "test": "jest",
+    "format": "prettier --write 'client/src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "prettier --check 'client/src/**/*.{js,jsx,ts,tsx}'",
+    "build:theme": "lessc --js ./client/src/index.less ./src/antd.css"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4"
-  }
+    "@babel/core": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@svgr/parcel-plugin-svgr": "^5.4.0",
+    "@testing-library/jest-dom": "^5.5.0",
+    "@testing-library/react": "^10.0.3",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "babel-plugin-import": "^1.13.0",
+    "browserslist": "^4.12.2",
+    "eslint": "^7.1.0",
+    "jest": "^25.4.0",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "parcel-plugin-compress": "^2.0.2",
+    "prettier": "^2.0.0",
+    "react": "^16.13.1",
+    "typescript": "^3.8.0"
+  },
+  "dependencies": {
+    "@ant-design/colors": "^4.0.0",
+    "@ant-design/icons": "^4.2.1",
+    "@apollo/react-hoc": "^3.1.5",
+    "@apollo/react-hooks": "^3.1.5",
+    "@enterprise-oss/osso": "^0.0.1",
+    "antd": "^4.4.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
