--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
-    "start": "parcel ./client/src/index.tsx",
-    "build": "node client/scripts/fix-rc-table.js && parcel build ./client/src/index.tsx --out-dir ./public",
+    "start": "parcel serve ./client/src/index.tsx",
+    "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "clean": "rm -rf client/dist",
     "test": "jest",
     "format": "prettier --write 'client/src/**/*.{js,jsx,ts,tsx}'",
@@ -25,7 +25,7 @@
     "browserslist": "^4.12.2",
     "eslint": "^7.1.0",
     "jest": "^25.4.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "prettier": "^2.0.0",
     "typescript": "^3.8.0"
