--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start": "parcel serve ./client/src/index.tsx",
     "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
-    "clean": "rm -rf client/dist",
+    "clean": "rm -rf client/dist && rm -rf .parcel-cache",
     "test": "jest",
     "format": "prettier --write 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lint": "prettier --check 'client/src/**/*.{js,jsx,ts,tsx}'",
@@ -35,7 +35,7 @@
     "@ant-design/icons": "^4.2.1",
     "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "@enterprise-oss/osso": "^0.0.1",
+    "@enterprise-oss/osso": "0.0.2",
     "antd": "^4.4.0",
     "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
