--- a/config/database.yml
+++ b/config/database.yml
@@ -9,3 +9,6 @@ default: &default
 development:
   <<: *default
   database: osso-development
+production:
+  <<: *default
+  database: osso-development
