--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -8,12 +8,6 @@
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "moduleResolution": "Node",
-    "include": [
-      "src/**/*"
-    ],
-    "exclude": [
-      "node_modules"
-    ]
+    "moduleResolution": "Node"
   }
 }
