--- a/package.json
+++ b/package.json
@@ -33,11 +33,9 @@
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
-    "@apollo/react-hoc": "^3.1.5",
     "@apollo/react-hooks": "^3.1.5",
-    "@enterprise-oss/osso": "0.0.4",
+    "@enterprise-oss/osso": "0.0.5-alpha.8",
     "antd": "^4.4.0",
-    "apollo-boost": "^0.4.9",
     "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
