try apollo beta and yalc

--- a/package.json
+++ b/package.json
@@ -33,10 +33,8 @@
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
-    "@apollo/react-hooks": "^3.1.5",
-    "@enterprise-oss/osso": "0.0.5-alpha.11",
+    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
     "antd": "^4.4.0",
-    "graphql": "^15.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
