--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.12.2",
     "eslint": "^7.1.0",
+    "husky": "^4.2.5",
     "jest": "^25.4.0",
     "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
@@ -33,7 +34,8 @@
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
-    "@enterprise-oss/osso": "^0.0.5-alpha.13",
+    "@apollo/client": "^3.0.0-rc.10",
+    "@enterprise-oss/osso": "^0.0.5-alpha.14",
     "antd": "^4.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -47,5 +49,10 @@
     "production": [
       "defaults"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yalc check"
+    }
   }
 }
