--- a/client/.babelrc
+++ b/client/.babelrc
@@ -4,7 +4,7 @@
       "import",
       {
         "libraryName": "antd",
-        "libraryDirectory": "es"
+        "libraryDirectory": "lib" // TODO: esm
       },
       "import-antd"
     ],
@@ -12,7 +12,7 @@
       "import",
       {
         "libraryName": "@ant-design/icons",
-        "libraryDirectory": "es/icons",
+        "libraryDirectory": "lib/icons", // TODO: esm
         "camel2DashComponentName": false
       },
       "import-antd-icons"
