--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
-    "build": "yarn parcel build ./client/src/index.tsx --dist-dir ./public",
+    "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "checktypes": "tsc -p client",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache",
-    "test": "yarn jest",
+    "test": "jest",
     "format": "prettier --write 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lint": "prettier --check 'client/src/**/*.{js,jsx,ts,tsx}'",
     "build:theme": "lessc --js ./client/src/index.less ./src/antd.css"
