--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -10,6 +10,12 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "Node",
     "outDir": "dist",
+    "baseUrl": ".",
+    "paths": {
+      "~*": [
+        "./src/*"
+      ]
+    }
   },
   "include": [
     "./src/*"
