--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@svgr/parcel-plugin-svgr": "^5.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.3",
+    "@types/enzyme": "^3.10.5",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
@@ -24,10 +25,13 @@
     "@typescript-eslint/parser": "^3.0.2",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.12.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.1.0",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.4.0",
+    "jest-fetch-mock": "^3.0.3",
     "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "prettier": "^2.0.0",
@@ -65,6 +69,9 @@
     "testPathIgnorePatterns": [
       "<rootDir>/.yalc/*",
       "<rootDir>/node_modules/*"
+    ],
+    "setupFiles": [
+      "<rootDir>/client/jest.setup.js"
     ]
   }
 }
