--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
+    "cypress:open": "cypress open",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
     "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "checktypes": "tsc -p client",
@@ -27,6 +28,7 @@
     "@typescript-eslint/parser": "^3.0.2",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.12.2",
+    "cypress": "^4.9.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.1.0",
