rm db plan from review apps

--- a/app.json
+++ b/app.json
@@ -31,5 +31,10 @@
     {
       "plan": "heroku-postgresql"
     }
-  ]
+  ],
+  "environments": {
+    "review": {
+      "addons": []
+    }
+  }
 }
