--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -10,3 +10,6 @@ steps:
 
   - command: "yarn install && yarn build"
     label: ":react: Build"
+ 
+  - command: "yarn cypress run"
+    label: ":cypress: e2e"
