--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "license": "SEE LICENSE IN LICENSE",
   "scripts": {
+    "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
+    "cypress:ci": "start-server-and-test 'bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
     "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "checktypes": "tsc -p client",
@@ -42,6 +44,7 @@
     "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
     "prettier": "^2.0.0",
+    "start-server-and-test": "^1.11.0",
     "typescript": "^3.8.0"
   },
   "dependencies": {
