--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -14,6 +14,13 @@ steps:
   
   - commands: 
     - "yarn install"
+    - "yarn ci:lint"
+    label: ":prettier: :plus: :eslint:"
+
+  - wait
+  
+  - commands: 
+    - "yarn install"
     - "yarn test"
     label: ":jest:"
 
