--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "checktypes": "tsc -p client",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache",
     "test": "jest",
-    "format": "prettier --write 'client/src/**/*.{js,jsx,ts,tsx}'",
-    "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
-    "ci:lint": "prettier 'client/src/**/*.{js,jsx,ts,tsx}' && eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
+    "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
+    "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
     "build:theme": "lessc --js ./client/src/index.less ./src/antd.css"
   },
   "devDependencies": {
@@ -35,7 +34,9 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-cypress": "^2.11.1",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
@@ -44,7 +45,7 @@
     "jsonwebtoken": "^8.5.1",
     "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
-    "prettier": "^2.0.0",
+    "prettier": "^2.0.5",
     "start-server-and-test": "^1.11.0",
     "typescript": "^3.8.0"
   },
