node_modules artifacts

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -9,6 +9,8 @@ steps:
     - "yarn install"
     - "yarn tsc -p client --declaration false"
     label: ":typescript:"
+    artifact_paths:
+      - "node_modules/**/*"
 
   - wait
   
