--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cypress:open": "cypress open",
     "cypress:ci": "start-server-and-test 'bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
-    "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
+    "build": "parcel build ./client/src/index.tsx --log-level warn --dist-dir ./public",
     "checktypes": "tsc -p client",
     "clean": "rm -rf client/dist && rm -rf .parcel-cache",
     "test": "jest",
