--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -5,7 +5,7 @@ jobs:
   automerge:
     name: automerge dependabot
     runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]' && status == 'success'
+    if: github.actor == 'dependabot[bot]' && github.status == 'success'
     steps:
       - name: merge
         uses: actions/github-script@0.2.0
