--- a/.parcelrc
+++ b/.parcelrc
@@ -1,6 +1,7 @@
 {
   "extends": "@parcel/config-default",
   "transformers": {
-    "*.{jpg,png,svg}": ["@parcel/transformer-raw"]
+    "*.svg": ["@parcel/transformer-svg-react"],
+    "*.{jpg,png}": ["@parcel/transformer-raw"]
   }
 }
