--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
-    "build:theme": "lessc --js ./client/src/index.less ./src/antd.css"
+    "build:theme": "lessc --js ./client/src/index.less ./client/src/antd.css"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
     "@babel/plugin-proposal-optional-chaining": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@parcel/transformer-svg-react": "^2.0.0-nightly.1739",
     "@svgr/parcel-plugin-svgr": "^5.4.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.4.5",
@@ -29,7 +30,6 @@
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "babel-plugin-import": "^1.13.0",
-    "browserslist": "^4.12.2",
     "browserslist": "^4.13.0",
     "cypress": "^4.10.0",
     "enzyme": "^3.11.0",
@@ -44,8 +44,10 @@
     "jest": "^26.1.0",
     "jest-fetch-mock": "^3.0.3",
     "jsonwebtoken": "^8.5.1",
+    "lessc": "^1.0.2",
     "parcel": "^2.0.0-beta.1",
     "parcel-plugin-bundle-visualiser": "^1.2.0",
+    "postcss-modules": "^3.2.0",
     "prettier": "^2.0.5",
     "start-server-and-test": "^1.11.1",
     "typescript": "^3.8.0"
