--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,6 +20,11 @@
       "./src/@types",
       "../node_modules/@types"
     ],
+    "plugins": [
+      {
+        "name": "typescript-plugin-css-modules"
+      }
+    ]
   },
   "include": [
     "./src/*"
