--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "postcss-modules": "^3.2.0",
     "prettier": "^2.0.5",
     "start-server-and-test": "^1.11.1",
-    "typescript": "^3.8.0"
+    "typescript": "^3.8.0",
+    "typescript-plugin-css-modules": "^2.4.0"
   },
   "dependencies": {
     "@ant-design/colors": "^4.0.0",
