--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/webpack-env": "^1.15.2",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
+    "autoprefixer": "^9.8.5",
     "babel-plugin-import": "^1.13.0",
     "browserslist": "^4.13.0",
     "cypress": "^4.10.0",
@@ -57,7 +58,7 @@
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
     "@apollo/client": "^3.0.0-rc.12",
-    "@enterprise-oss/osso": "^0.0.5-alpha.27",
+    "@enterprise-oss/osso": "file:.yalc/@enterprise-oss/osso",
     "antd": "^4.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
