--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "scripts": {
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
-    "cypress:ci": "start-server-and-test 'bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
+    "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
     "build": "parcel build ./client/src/index.tsx --log-level warn --dist-dir ./public",
     "typecheck": "tsc --noEmit -p client",
-    "clean": "rm -rf client/dist && rm -rf .parcel-cache",
+    "clean": "rm -rf client/dist && rm -rf .parcel-cache && rm -rf public/*",
     "test": "jest",
     "lint": "eslint 'client/src/**/*.{js,jsx,ts,tsx}'",
     "lintfix": "eslint 'client/src/**/*.{js,jsx,ts,tsx}' --fix",
