--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
-    "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'DEBUG=cypress:* cypress run'",
+    "cypress:ci": "start-server-and-test 'RACK_ENV=test bundle exec rackup -p 9292' http-get://localhost:9292/health 'yarn cypress run'",
     "start": "yalc add @enterprise-oss/osso && parcel serve ./client/src/index.tsx",
     "build": "parcel build ./client/src/index.tsx --dist-dir ./public",
     "typecheck": "tsc --noEmit -p client",
