print parcel version

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -29,6 +29,7 @@ steps:
   - wait
 
   - commands: 
+      - "yarn parcel --version"
       - "yarn install --force"
       - "yarn build"
     label: "🏗"
