--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "license": "SEE LICENSE IN LICENSE",
+  "main": "public/index.js",
   "scripts": {
     "start-server": "bundle exec rackup -p 9292",
     "cypress:open": "cypress open",
