--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
     "@apollo/client": "^3.0.0",
-    "@enterprise-oss/osso": "git+https://github.com/enterprise-oss/osso-react.git#sbauch/create-account-mutation",
+    "@enterprise-oss/osso": "git+ssh://git@github.com:enterprise-oss/osso-react.git#sbauch/create-account-mutation",
     "antd": "^4.4.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
