migrate db in pipeline

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,6 +2,7 @@ steps:
 
   - commands: 
     - "bundle install"
+    - "bundle exec db:migrate"
     - "bundle exec rspec"
     label: ":rspec:"
   
