migrate db in pipeline in test env

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,6 +10,7 @@ development:
   <<: *default
   database: osso-development
 test:
+  <<: *default
   adapter: postgresql
   encoding: unicode
   pool: 5
