--- a/package.json
+++ b/package.json
@@ -60,12 +60,15 @@
     "@ant-design/colors": "^4.0.0",
     "@ant-design/icons": "^4.2.1",
     "@apollo/client": "^3.0.1",
-    "@enterprise-oss/osso": "^0.0.5-alpha.28",
+    "@enterprise-oss/osso": "^0.0.5-alpha.29",
     "antd": "^4.4.2",
+    "fast-xml-parser": "^3.17.4",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "use-debounce": "^3.4.3"
   },
   "browserslist": {
     "development": [
