--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,9 +1,9 @@
 steps:
 
   - commands: 
-    - "bundle install"
-    - "RACK_ENV=test bundle exec rake db:migrate"
-    - "bundle exec rspec"
+    - bundle install
+    - RACK_ENV=test bundle exec rake db:migrate
+    - bundle exec rspec
     label: ":rspec:"
   
   - wait
